# constitution-overlay

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  llms.txt  pyproject.toml
examples/: basic_usage.py
src/constitution_overlay/: __init__.py  constitution.py  corrections.py  executor.py
tests/: test_constitution.py  test_executor.py  test_merge.py  test_smoke.py
